--- a/Admin Page/src/application/application.css
+++ b/Admin Page/src/application/application.css
@@ -1,15 +1,17 @@
 .root{
 	
-	-fx-backround-color:"orange";
+	-fx-background-color:F6C337;
 	
 }
 .label{
-	
+	-fx-font-family: "Calibri";
+	-fx-font-weight: bold;
 	
 }
 
 #TtilePage{
-	
-	
-	
-}/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+}	
+#TtilePage{
+	-fx-alignment: center;	
+}
+/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
