--- a/LoginConfirm/src/FinishInput.fxml
+++ b/LoginConfirm/src/FinishInput.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="374.0" prefWidth="399.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="374.0" prefWidth="399.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginConfirmController">
    <children>
       <Button fx:id="ContinueButton" layoutX="141.0" layoutY="329.0" mnemonicParsing="false" onAction="#Login" prefHeight="31.0" prefWidth="120.0" text="Continue" />
       <Label fx:id="titleLabel" layoutX="-6.0" layoutY="28.0" prefHeight="45.0" prefWidth="413.0" text="Confirm Login" textAlignment="CENTER">
