--- a/Admin Page/src/GUI.fxml
+++ b/Admin Page/src/GUI.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="509.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
+<AnchorPane fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="509.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AdminPageController">
    <children>
       <Button fx:id="logoutbutton" layoutX="23.0" layoutY="344.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
       <Button fx:id="Reset" layoutX="118.0" layoutY="344.0" mnemonicParsing="false" text="Reset" />
