--- a/CSE_360_PROJECT/src/AdminPage/GUI.fxml
+++ b/CSE_360_PROJECT/src/AdminPage/GUI.fxml
@@ -7,15 +7,16 @@
 
 <AnchorPane fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="509.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AdminPage.AdminPageController">
    <children>
-      <Button fx:id="logoutbutton" layoutX="23.0" layoutY="344.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
-      <Button fx:id="Reset" layoutX="118.0" layoutY="344.0" mnemonicParsing="false" text="Reset" />
-      <Button fx:id="Invite" layoutX="203.0" layoutY="344.0" mnemonicParsing="false" text="Invite" />
-      <Button fx:id="AddorRemove" layoutX="281.0" layoutY="344.0" mnemonicParsing="false" text="Add/Remove" />
-      <Button fx:id="Listusers" layoutX="410.0" layoutY="344.0" mnemonicParsing="false" text="List Users" />
+      <Button fx:id="logoutbutton" layoutX="148.0" layoutY="382.0" mnemonicParsing="false" onAction="#logout" prefHeight="13.0" prefWidth="189.0" text="Logout" />
+      <Button fx:id="Reset" layoutX="20.0" layoutY="344.0" mnemonicParsing="false" onAction="#ResetUser" text="Reset" />
+      <Button fx:id="Invite" layoutX="93.0" layoutY="344.0" mnemonicParsing="false" onAction="#InviteUser" text="Invite user" />
+      <Button fx:id="AddorRemove" layoutX="178.0" layoutY="344.0" mnemonicParsing="false" onAction="#AddorRemove" text="Add/Remove role" />
+      <Button fx:id="Listusers" layoutX="304.0" layoutY="344.0" mnemonicParsing="false" onAction="#ListUsers" text="List Users" />
       <Label fx:id="TtilePage" layoutX="29.0" layoutY="20.0" prefHeight="98.0" prefWidth="466.0" text="Welcome to the Admin Page">
          <font>
             <Font size="32.0" />
          </font>
       </Label>
+      <Button fx:id="Delete" layoutX="377.0" layoutY="344.0" mnemonicParsing="false" onAction="#Delete" prefHeight="25.0" prefWidth="94.0" text="Delete Users" />
    </children>
 </AnchorPane>
