--- a/CSE_360_PROJECT/src/AdminPage/application.css
+++ b/CSE_360_PROJECT/src/AdminPage/application.css
@@ -4,13 +4,13 @@
 	
 }
 .label{
+	 -fx-alignment: center;
 	-fx-font-family: "Calibri";
 	-fx-font-weight: bold;
 	
 }
 
-#TtilePage{
-}	
+
 #TtilePage{
 	-fx-alignment: center;	
 }
