--- a/CSE_360_PROJECT/src/LoginPage/application.css
+++ b/CSE_360_PROJECT/src/LoginPage/application.css
@@ -1,1 +1,14 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+
+.root{
+	
+	-fx-background-color:D53730;
+	
+}
+.label{
+	 -fx-alignment: center;
+	-fx-font-family: "Calibri";
+	-fx-font-weight: bold;
+
+	
+}
