--- a/CSE_360_PROJECT/src/StudentPage/Student.fxml
+++ b/CSE_360_PROJECT/src/StudentPage/Student.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="472.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="StudentPage.StudentpageController">
+<AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="472.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="StudentPage.StudentpageController">
    <children>
-      <Button fx:id="studentLogout" layoutX="30.0" layoutY="364.0" mnemonicParsing="false" onAction="#logout" text="Log out" />
+      <Button fx:id="studentLogout" layoutX="131.0" layoutY="364.0" mnemonicParsing="false" onAction="#logout" text="Log out" />
       <Label fx:id="TitleLabel" layoutX="94.0" layoutY="56.0" text="Welcome to Student page!">
          <font>
             <Font size="24.0" />
@@ -23,5 +23,6 @@
             <Font size="20.0" />
          </font>
       </Label>
+     <Button fx:id="searchButton" layoutX="256.0" layoutY="364.0" mnemonicParsing="false" text="Search for articles" onAction="#loadSearchArticlesPage" />
    </children>
 </AnchorPane>
