--- a/CSE_360_PROJECT/src/InstructorPage/Instructor.fxml
+++ b/CSE_360_PROJECT/src/InstructorPage/Instructor.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="472.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InstructorPage.InstructorPageController">
+<AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="472.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InstructorPage.InstructorPageController">
    <children>
-      <Button fx:id="InstructorLoout" layoutX="30.0" layoutY="364.0" mnemonicParsing="false" onAction="#logout" text="Log out" />
+      <Button fx:id="InstructorLoout" layoutX="76.0" layoutY="364.0" mnemonicParsing="false" onAction="#logout" prefHeight="25.0" prefWidth="69.0" text="Log out" />
       <Label fx:id="UserLabel" layoutX="236.0" layoutY="95.0" text="user">
          <font>
             <Font size="24.0" />
@@ -23,5 +23,7 @@
             <Font size="24.0" />
          </font>
       </Label>
+      <Button fx:id="CreateArticlesButton" layoutX="190.0" layoutY="364.0" mnemonicParsing="false" onAction="#createArticle" text="Create Artilces" />
+      <Button fx:id="ListArticlesButton" layoutX="326.0" layoutY="198.0" mnemonicParsing="false" onAction="#ListArtilces" text="List Articles" />
    </children>
 </AnchorPane>
