--- a/CSE_360_PROJECT/src/StudentPage/Student.fxml
+++ b/CSE_360_PROJECT/src/StudentPage/Student.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="472.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="StudentPage.StudentpageController">
    <children>
-      <Button fx:id="studentLogout" layoutX="131.0" layoutY="364.0" mnemonicParsing="false" onAction="#logout" text="Log out" />
+      <Button fx:id="studentLogout" layoutX="100.0" layoutY="364.0" mnemonicParsing="false" onAction="#logout" text="Log out" />
       <Label fx:id="TitleLabel" layoutX="94.0" layoutY="56.0" text="Welcome to Student page!">
          <font>
             <Font size="24.0" />
@@ -23,6 +23,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-     <Button fx:id="searchButton" layoutX="256.0" layoutY="364.0" mnemonicParsing="false" onAction="#loadSearchArticlesPage" text="View Article" />
+     <Button fx:id="searchButton" layoutX="188.0" layoutY="364.0" mnemonicParsing="false" onAction="#loadSearchArticlesPage" text="View Article" />
+      <Button layoutX="302.0" layoutY="364.0" mnemonicParsing="false" onAction="#ListArtilces" text="List Articles" />
    </children>
 </AnchorPane>
