--- a/CSE_360_PROJECT/src/AdminPage/GUI.fxml
+++ b/CSE_360_PROJECT/src/AdminPage/GUI.fxml
@@ -38,7 +38,7 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="Listusers1" layoutX="326.0" layoutY="198.0" mnemonicParsing="false" onAction="#ListArtilces" text="List Articles" />
+      <Button fx:id="Listusers1" layoutX="326.0" layoutY="198.0" mnemonicParsing="false" onAction="#ListArtices" text="List Articles" />
       <Button fx:id="Listusers11" layoutX="321.0" layoutY="235.0" mnemonicParsing="false" onAction="#createArticle" text="Create Artilces" />
    </children>
 </AnchorPane>
