--- a/CSE_360_PROJECT/src/AdminPage/GUI.fxml
+++ b/CSE_360_PROJECT/src/AdminPage/GUI.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="509.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AdminPage.AdminPageController">
+<AnchorPane fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="509.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AdminPage.AdminPageController">
    <children>
       <Button fx:id="logoutbutton" layoutX="160.0" layoutY="382.0" mnemonicParsing="false" onAction="#logout" prefHeight="13.0" prefWidth="189.0" text="Logout" />
       <Button fx:id="Reset" layoutX="368.0" layoutY="382.0" mnemonicParsing="false" onAction="#ResetUser" prefHeight="25.0" prefWidth="104.0" text="Reset" />
@@ -40,5 +40,6 @@
       </Label>
       <Button fx:id="Listusers1" layoutX="326.0" layoutY="198.0" mnemonicParsing="false" onAction="#ListArtices" text="List Articles" />
       <Button fx:id="Listusers11" layoutX="321.0" layoutY="235.0" mnemonicParsing="false" onAction="#createArticle" text="Create Artilces" />
+      <Button fx:id="Article_delete" layoutX="318.0" layoutY="291.0" mnemonicParsing="false" onAction="#Article_delete" prefHeight="25.0" prefWidth="93.0" text="Delete Article" />
    </children>
 </AnchorPane>
