--- a/CSE_360_PROJECT/src/AdminPage/ChangeRoles.fxml
+++ b/CSE_360_PROJECT/src/AdminPage/ChangeRoles.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="changeAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="271.0" prefWidth="265.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AdminPage.ChangeRolesController">
+
+<AnchorPane fx:id="changeAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="312.0" prefWidth="301.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AdminPage.ChangeRolesController">
    <children>
       <Label layoutX="26.0" layoutY="35.0" text="Change Role of user">
          <font>
@@ -14,8 +15,9 @@
          </font>
       </Label>
       <TextField fx:id="Username_textfield" layoutX="58.0" layoutY="123.0" promptText="ex.adrian" />
-      <Button layoutX="58.0" layoutY="190.0" mnemonicParsing="false" onAction="#setStudent" prefHeight="25.0" prefWidth="67.0" text="Student" />
-      <Button layoutX="140.0" layoutY="190.0" mnemonicParsing="false" onAction="#setInstructor" text="Instructor" />
+      <Button layoutX="220.0" layoutY="190.0" mnemonicParsing="false" onAction="#setStudent" prefHeight="25.0" prefWidth="67.0" text="Student" />
+      <Button layoutX="127.0" layoutY="190.0" mnemonicParsing="false" onAction="#setInstructor" prefHeight="25.0" prefWidth="80.0" text="Instructor" />
       <Label fx:id="username_label" layoutX="58.0" layoutY="106.0" text="Username:" />
+      <Button layoutX="9.0" layoutY="190.0" mnemonicParsing="false" onAction="#setAdminInstructor" prefHeight="25.0" prefWidth="106.0" text="Admin Instructor" />
    </children>
 </AnchorPane>
