--- a/CSE_360_PROJECT/src/admin_Instructor/Admin_Instructor_Page.fxml
+++ b/CSE_360_PROJECT/src/admin_Instructor/Admin_Instructor_Page.fxml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.layout.Layer?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="498.0" prefWidth="777.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="498.0" prefWidth="777.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin_Instructor.Admin_Instructor_Controller">
    <children>
       <Label layoutX="87.0" layoutY="22.0" prefHeight="123.0" prefWidth="684.0" text="Welcome to the Admin Instructors home page">
          <font>
             <Font size="29.0" />
          </font>
       </Label>
-      <Button layoutX="98.0" layoutY="192.0" mnemonicParsing="false" text="Create Help Article" />
+      <Button layoutX="98.0" layoutY="192.0" mnemonicParsing="false" onAction="#createArticle" text="Create Help Article" />
       <Button layoutX="95.0" layoutY="311.0" mnemonicParsing="false" text="Restore Help Article" />
-      <Button layoutX="98.0" layoutY="249.0" mnemonicParsing="false" text="Delete Help Article" />
-      <Layer layoutX="144.0" layoutY="146.0" />
+      <Button layoutX="98.0" layoutY="249.0" mnemonicParsing="false" onAction="#Article_delete" text="Delete Help Article" />
       <Label layoutX="95.0" layoutY="146.0" prefHeight="33.0" prefWidth="207.0" text="Help Article Functions">
          <font>
             <Font size="18.0" />
@@ -37,5 +35,6 @@
       </Label>
       <Button layoutX="571.0" layoutY="262.0" mnemonicParsing="false" text="Remove Instructors" />
       <Button layoutX="578.0" layoutY="205.0" mnemonicParsing="false" text="Remove Student" />
+      <Button layoutX="335.0" layoutY="443.0" mnemonicParsing="false" onAction="#logout" prefHeight="25.0" prefWidth="158.0" text="Logout" />
    </children>
 </AnchorPane>
