--- a/CSE_360_PROJECT/src/admin_Instructor/Admin_Instructor_Page.fxml
+++ b/CSE_360_PROJECT/src/admin_Instructor/Admin_Instructor_Page.fxml
@@ -1,41 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.layout.Layer?>
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="498.0" prefWidth="777.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="758.0" style="-fx-background-color: dab2d8;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="87.0" layoutY="22.0" prefHeight="123.0" prefWidth="684.0" text="Welcome to the Admin Instructors home page">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6f0e6a" height="200.0" layoutX="-5.0" layoutY="-51.0" stroke="BLACK" strokeType="INSIDE" width="780.0" />
+      <Label layoutX="63.0" layoutY="23.0" prefHeight="123.0" prefWidth="684.0" style="-fx-text-fill: white;" text="Welcome to the Admin Instructors home page" textFill="WHITE">
          <font>
             <Font size="29.0" />
          </font>
       </Label>
-      <Button layoutX="98.0" layoutY="192.0" mnemonicParsing="false" text="Create Help Article" />
-      <Button layoutX="95.0" layoutY="311.0" mnemonicParsing="false" text="Restore Help Article" />
-      <Button layoutX="98.0" layoutY="249.0" mnemonicParsing="false" text="Delete Help Article" />
-      <Layer layoutX="144.0" layoutY="146.0" />
-      <Label layoutX="95.0" layoutY="146.0" prefHeight="33.0" prefWidth="207.0" text="Help Article Functions">
+      <Button fx:id="createHelpArticles_button" layoutX="14.0" layoutY="192.0" mnemonicParsing="false" text="Create Help Article" />
+      <Button fx:id="restoreHelpArticles_button" layoutX="15.0" layoutY="279.0" mnemonicParsing="false" text="Restore Help Article" />
+      <Button fx:id="deleteHelpArticles_button" layoutX="15.0" layoutY="234.0" mnemonicParsing="false" text="Delete Help Article" />
+      
+      <Label layoutX="7.0" layoutY="146.0" prefHeight="33.0" prefWidth="207.0" style="-fx-text-fill: white;" text="Help Article Functions" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="326.0" layoutY="149.0" text="General Groups functions ">
+      <Label layoutX="276.0" layoutY="149.0" style="-fx-text-fill: white;" text="General Groups functions ">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button layoutX="355.0" layoutY="205.0" mnemonicParsing="false" text="View Groups" />
-      <Button layoutX="355.0" layoutY="249.0" mnemonicParsing="false" text="Add Student" />
-      <Button layoutX="349.0" layoutY="298.0" mnemonicParsing="false" text="Add Instructors" />
-      <Label layoutX="549.0" layoutY="146.0" prefHeight="33.0" prefWidth="207.0" text="Remove Article Functions">
+      <Button fx:id="AddClass_Button" layoutX="324.0" layoutY="186.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="112.0" text="Add Class" />
+      <Button fx:id="AddStudent_Button" layoutX="323.0" layoutY="234.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="112.0" text="Add Student" />
+      <Button fx:id="AddInstruction_Button" layoutX="323.0" layoutY="279.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="112.0" text="Add Instructors" />
+      <Label layoutX="549.0" layoutY="146.0" prefHeight="33.0" prefWidth="207.0" style="-fx-text-fill: white;" text="Remove Article Functions">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button layoutX="571.0" layoutY="262.0" mnemonicParsing="false" text="Remove Instructors" />
-      <Button layoutX="578.0" layoutY="205.0" mnemonicParsing="false" text="Remove Student" />
+      <Button fx:id="RemoveInstructor_Page" layoutX="588.0" layoutY="234.0" mnemonicParsing="false" text="Remove Instructors" />
+      <Button fx:id="RemoveStudent_Button" layoutX="587.0" layoutY="192.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="132.0" text="Remove Student" />
+      <Button fx:id="logout_Button" layoutX="353.0" layoutY="364.0" mnemonicParsing="false" text="log out" />
+      <Button fx:id="RemoveClass_Button" layoutX="587.0" layoutY="279.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="132.0" text="Remove Class" />
    </children>
 </AnchorPane>
