--- a/CSE_360_PROJECT/src/InstructorPage/Instructor.fxml
+++ b/CSE_360_PROJECT/src/InstructorPage/Instructor.fxml
@@ -6,12 +6,12 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="472.0" style="-fx-background-color: #34eb49;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InstructorPage.InstructorPageController">
+<AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="472.0" style="-fx-background-color: #34eb49;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InstructorPage.InstructorPageController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#16c42a" height="208.0" layoutX="-41.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="531.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#169425" height="200.0" layoutX="-47.0" layoutY="-13.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="539.0" />
-      <Button layoutX="259.0" layoutY="364.0" mnemonicParsing="false" onAction="#Article_delete" text="Delete Articles" />
-      <Button fx:id="InstructorLoout" layoutX="35.0" layoutY="364.0" mnemonicParsing="false" onAction="#logout" prefHeight="25.0" prefWidth="69.0" text="Log out" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#16c42a" height="208.0" layoutX="-41.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="513.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#169425" height="200.0" layoutY="-17.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="472.0" />
+      <Button layoutX="154.0" layoutY="311.0" mnemonicParsing="false" onAction="#Article_delete" text="Delete Articles" />
+      <Button fx:id="InstructorLoout" layoutX="370.0" layoutY="381.0" mnemonicParsing="false" onAction="#logout" prefHeight="25.0" prefWidth="69.0" text="Log out" />
       <Label fx:id="UserLabel" layoutX="236.0" layoutY="95.0" text="user" textFill="WHITE">
          <font>
             <Font size="24.0" />
@@ -27,7 +27,20 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Button fx:id="CreateArticlesButton" layoutX="129.0" layoutY="364.0" mnemonicParsing="false" onAction="#createArticle" text="Create Articles" />
-      <Button fx:id="ListArticlesButton" layoutX="366.0" layoutY="364.0" mnemonicParsing="false" onAction="#ListArtilces" text="List Articles" />
+      <Button fx:id="CreateArticlesButton" layoutX="29.0" layoutY="311.0" mnemonicParsing="false" onAction="#createArticle" text="Create Articles" />
+      <Button fx:id="ListArticlesButton" layoutX="281.0" layoutY="311.0" mnemonicParsing="false" onAction="#ListArtilces" text="List Articles" />
+      <Label layoutX="29.0" layoutY="156.0" prefHeight="27.0" prefWidth="151.0" text="Help Articles:" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Button fx:id="CreateHelpArticle" layoutX="29.0" layoutY="190.0" mnemonicParsing="false" onAction="#createHelpArticle" prefHeight="25.0" prefWidth="76.0" text="Create" />
+      <Button fx:id="HelpArticle_Delete" layoutX="154.0" layoutY="190.0" mnemonicParsing="false" onAction="#HelpArticle_delete" prefHeight="25.0" prefWidth="76.0" text="Delete" />
+      <Button fx:id="ListHelpArticles"  layoutX="280.0" layoutY="190.0" mnemonicParsing="false" onAction="#ListHelpArticles" prefHeight="25.0" prefWidth="69.0" text="List" />
+      <Label layoutX="29.0" layoutY="269.0" prefHeight="27.0" prefWidth="163.0" text="General Articles:" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
