--- a/CSE_360_PROJECT/src/admin_Instructor/Admin_Instructor_Page.fxml
+++ b/CSE_360_PROJECT/src/admin_Instructor/Admin_Instructor_Page.fxml
@@ -3,38 +3,49 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="498.0" prefWidth="777.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin_Instructor.Admin_Instructor_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="758.0" style="-fx-background-color: dab2d8;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin_Instructor.Admin_Instructor_Controller">
    <children>
-      <Label layoutX="87.0" layoutY="22.0" prefHeight="123.0" prefWidth="684.0" text="Welcome to the Admin Instructors home page">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6f0e6a" height="200.0" layoutX="-5.0" layoutY="-51.0" width="780.0" />
+      <Label layoutX="63.0" layoutY="23.0" prefHeight="123.0" prefWidth="684.0" style="-fx-text-fill: white;" text="Welcome to the Admin Instructors home page">
          <font>
             <Font size="29.0" />
          </font>
       </Label>
-      <Button layoutX="98.0" layoutY="192.0" mnemonicParsing="false" onAction="#createArticle" text="Create Help Article" />
-      <Button layoutX="95.0" layoutY="311.0" mnemonicParsing="false" text="Restore Help Article" />
-      <Button layoutX="98.0" layoutY="249.0" mnemonicParsing="false" onAction="#Article_delete" text="Delete Help Article" />
-      <Label layoutX="95.0" layoutY="146.0" prefHeight="33.0" prefWidth="207.0" text="Help Article Functions">
+      
+      <!-- Help Article Functions Section -->
+      <Label layoutX="15.0" layoutY="146.0" prefHeight="33.0" prefWidth="207.0" style="-fx-text-fill: white;" text="Help Article Functions">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="326.0" layoutY="149.0" text="General Groups functions ">
+      <Button fx:id="createHelpArticles_button" layoutX="15.0" layoutY="192.0" mnemonicParsing="false" onAction="#createArticle" text="Create Help Article" />
+      <Button fx:id="deleteHelpArticles_button" layoutX="15.0" layoutY="234.0" mnemonicParsing="false" onAction="#Article_delete" text="Delete Help Article" />
+      <Button fx:id="restoreHelpArticles_button" layoutX="15.0" layoutY="279.0" mnemonicParsing="false" text="Restore Help Article" />
+
+      <!-- General Groups Functions Section -->
+      <Label layoutX="276.0" layoutY="146.0" style="-fx-text-fill: white;" text="General Groups Functions">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button layoutX="355.0" layoutY="205.0" mnemonicParsing="false" text="View Groups" />
-      <Button layoutX="355.0" layoutY="249.0" mnemonicParsing="false" text="Add Student" />
-      <Button layoutX="349.0" layoutY="298.0" mnemonicParsing="false" text="Add Instructors" />
-      <Label layoutX="549.0" layoutY="146.0" prefHeight="33.0" prefWidth="207.0" text="Remove Article Functions">
+      <Button fx:id="AddClass_Button" layoutX="323.0" layoutY="186.0" prefHeight="30.0" prefWidth="112.0" text="Add Class" />
+      <Button fx:id="AddStudent_Button" layoutX="323.0" layoutY="234.0" prefHeight="30.0" prefWidth="112.0" text="Add Student" />
+      <Button fx:id="AddInstructor_Button" layoutX="323.0" layoutY="279.0" prefHeight="30.0" prefWidth="112.0" text="Add Instructor" />
+
+      <!-- Remove Article Functions Section -->
+      <Label layoutX="549.0" layoutY="146.0" prefHeight="33.0" prefWidth="207.0" style="-fx-text-fill: white;" text="Remove Article Functions">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button layoutX="571.0" layoutY="262.0" mnemonicParsing="false" text="Remove Instructors" />
-      <Button layoutX="578.0" layoutY="205.0" mnemonicParsing="false" text="Remove Student" />
-      <Button layoutX="335.0" layoutY="443.0" mnemonicParsing="false" onAction="#logout" prefHeight="25.0" prefWidth="158.0" text="Logout" />
+      <Button fx:id="RemoveStudent_Button" layoutX="587.0" layoutY="192.0" prefHeight="30.0" prefWidth="132.0" text="Remove Student" />
+      <Button fx:id="RemoveInstructor_Button" layoutX="587.0" layoutY="234.0" prefHeight="30.0" prefWidth="132.0" text="Remove Instructor" />
+      <Button fx:id="RemoveClass_Button" layoutX="587.0" layoutY="279.0" prefHeight="30.0" prefWidth="132.0" text="Remove Class" />
+
+      <!-- Logout Button -->
+      <Button fx:id="logout_Button" layoutX="335.0" layoutY="364.0" prefHeight="25.0" prefWidth="158.0" onAction="#logout" text="Logout" />
    </children>
 </AnchorPane>
