--- a/CSE_360_PROJECT/src/LoginPage/Login.fxml
+++ b/CSE_360_PROJECT/src/LoginPage/Login.fxml
@@ -5,10 +5,13 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="361.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginPage.Login_Button_Controller">
+<AnchorPane prefHeight="400.0" prefWidth="374.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginPage.Login_Button_Controller">
     <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ed3958" height="270.0" layoutX="185.0" layoutY="129.0" stroke="BLACK" strokeType="INSIDE" width="184.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ed3958" height="268.0" layoutX="5.0" layoutY="131.0" stroke="BLACK" strokeType="INSIDE" width="174.0" />
         <!-- Title Label -->
         <Label layoutX="28.0" layoutY="129.0" text="Login" textFill="WHITE">
             <font>
@@ -18,20 +21,20 @@
 
         <!-- Username Label and TextField -->
         <Label fx:id="usernameLabel" layoutX="30.0" layoutY="171.0" text="Username:" textFill="#000000" />
-        <TextField fx:id="Username_textField" layoutX="30.0" layoutY="188.0" promptText="Username" />
+        <TextField fx:id="Username_textField" layoutX="20.0" layoutY="190.0" promptText="Username" />
 
         <!-- Password Label and PasswordField -->
         <Label fx:id="passwordLabel" layoutX="213.0" layoutY="215.0" text="Password:" textFill="#000000" />
-        <PasswordField fx:id="Password_textField" layoutX="30.0" layoutY="230.0" promptText="Password" />
+        <PasswordField fx:id="Password_textField" layoutX="21.0" layoutY="231.0" promptText="Password" />
 
         <!-- Login Button -->
         <Button fx:id="Login_Button" layoutX="28.0" layoutY="266.0" onAction="#Login" text="Login" />
 
         <!-- Feedback Label -->
         <Label fx:id="feedbackLabel" layoutX="10.0" layoutY="160.0" textFill="#FF0000" />
-      <Label fx:id="titleLabel" layoutY="29.0" text="ASU Grade Finder" textAlignment="CENTER" textFill="WHITE">
+      <Label fx:id="titleLabel" layoutX="4.0" layoutY="42.0" prefHeight="70.0" prefWidth="351.0" text="ASU Grade Finder" textAlignment="CENTER" textFill="WHITE">
          <font>
-            <Font size="48.0" />
+            <Font name="System Bold" size="42.0" />
          </font>
       </Label>
       <Label fx:id="Register_label" layoutX="223.0" layoutY="129.0" text="Register" textFill="WHITE">
@@ -45,8 +48,8 @@
       <PasswordField fx:id="Reg_Password_TextField" layoutX="211.0" layoutY="230.0" promptText="Password" />
       <Label fx:id="passwordLabel2" layoutX="213.0" layoutY="258.0" text="Confirm Password:" textFill="#000000" />
       <PasswordField fx:id="Reg_confirmPassword_TextField" layoutX="211.0" layoutY="279.0" promptText="Password" />
-      <Button fx:id="Register_button" layoutX="209.0" layoutY="372.0" onAction="#Register" text="Register" />
-      <Button fx:id="InviteCodeButton" layoutX="28.0" layoutY="344.0" mnemonicParsing="false" onAction="#InviteCode" prefHeight="53.0" prefWidth="79.0" text="Codes" />
+      <Button fx:id="Register_button" layoutX="206.0" layoutY="366.0" onAction="#Register" text="Register" />
+      <Button fx:id="InviteCodeButton" layoutX="24.0" layoutY="341.0" mnemonicParsing="false" onAction="#InviteCode" prefHeight="53.0" prefWidth="79.0" text="Codes" />
       <TextField fx:id="InviteCode_textField" layoutX="211.0" layoutY="331.0" promptText="123" />
       <Label fx:id="passwordLabel21" layoutX="209.0" layoutY="309.0" text="Invite Code:" textFill="#000000" />
       <Button fx:id="ForgotPassword_Button" layoutX="25.0" layoutY="305.0" mnemonicParsing="false" onAction="#loadForgot" text="Forgot Password" />
