Updated admin instructor UI and bugfixed database logic

--- a/CSE_360_PROJECT/admin_Instructor/addStudentoClass.fxml
+++ b/CSE_360_PROJECT/admin_Instructor/addStudentoClass.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0" prefWidth="374.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="42.0" layoutY="28.0" prefHeight="62.0" prefWidth="290.0" text="Add Student to a group" textAlignment="CENTER">
+      <Label layoutX="42.0" layoutY="28.0" prefHeight="62.0" prefWidth="290.0" text="Add Student to a Class" textAlignment="CENTER">
          <font>
             <Font size="24.0" />
          </font>
@@ -18,13 +18,13 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Label layoutX="16.0" layoutY="243.0" prefHeight="51.0" prefWidth="132.0" text="Group Name:">
+      <Label layoutX="16.0" layoutY="243.0" prefHeight="51.0" prefWidth="132.0" text="Class Name:">
          <font>
             <Font size="19.0" />
          </font>
       </Label>
       <TextField fx:id="Student_Name_Textfield" layoutX="148.0" layoutY="169.0" promptText="Student Name" />
-      <TextField fx:id="S_Group_Textfield" layoutX="152.0" layoutY="256.0" promptText="Group Name" />
-      <Button layoutX="90.0" layoutY="324.0" mnemonicParsing="false" onAction="#Add_student_to_group" prefHeight="36.0" prefWidth="177.0" text="Add to Group" />
+      <TextField fx:id="S_Group_Textfield" layoutX="152.0" layoutY="256.0" promptText="Class Name" />
+      <Button layoutX="90.0" layoutY="324.0" mnemonicParsing="false" onAction="#Add_student_to_group" prefHeight="36.0" prefWidth="177.0" text="Add to Class" />
    </children>
 </AnchorPane>
