--- a/CSE_360_PROJECT/admin_Instructor/Admin_Instructor_Page.fxml
+++ b/CSE_360_PROJECT/admin_Instructor/Admin_Instructor_Page.fxml
@@ -9,7 +9,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="758.0" style="-fx-background-color: dab2d8;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin_Instructor.Admin_Instructor_Controller">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6f0e6a" height="200.0" layoutX="-5.0" layoutY="-51.0" width="780.0" />
-      <Label layoutX="63.0" layoutY="23.0" prefHeight="123.0" prefWidth="684.0" style="-fx-text-fill: white;" text="Welcome to the Admin Instructors home page">
+      <Label fx:id="TitleLabel" layoutX="63.0" layoutY="23.0" prefHeight="123.0" prefWidth="684.0" style="-fx-text-fill: white;" text="Welcome to the Admin Instructors home page">
          <font>
             <Font size="29.0" />
          </font>
@@ -21,9 +21,9 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="createHelpArticles_button" layoutX="15.0" layoutY="192.0" mnemonicParsing="false" onAction="#createArticle" text="Create Help Article" />
-      <Button fx:id="deleteHelpArticles_button" layoutX="15.0" layoutY="234.0" mnemonicParsing="false" onAction="#Article_delete" text="Delete Help Article" />
-      <Button fx:id="restoreHelpArticles_button" layoutX="15.0" layoutY="279.0" mnemonicParsing="false" text="Restore Help Article" />
+      <Button fx:id="createHelpArticles_button" layoutX="15.0" layoutY="192.0" mnemonicParsing="false" onAction="#createArticle" style="-fx-background-color: #c41088;" text="Create Help Article" textFill="WHITE" />
+      <Button fx:id="deleteHelpArticles_button" layoutX="15.0" layoutY="234.0" mnemonicParsing="false" onAction="#Article_delete" style="-fx-background-color: #c41088;" text="Delete Help Article" textFill="WHITE" />
+      <Button fx:id="restoreHelpArticles_button" layoutX="15.0" layoutY="279.0" mnemonicParsing="false" style="-fx-background-color: #c41088;" text="Restore Help Article" textFill="WHITE" />
 
       <!-- General Groups Functions Section -->
       <Label layoutX="276.0" layoutY="146.0" style="-fx-text-fill: white;" text="General Groups Functions">
@@ -31,9 +31,8 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="AddClass_Button" layoutX="323.0" layoutY="186.0" prefHeight="30.0" prefWidth="112.0" text="Add Class" />
-      <Button fx:id="AddStudent_Button" layoutX="323.0" layoutY="234.0" onAction="#AddStudent_Button" prefHeight="30.0" prefWidth="112.0" text="Add Student" />
-      <Button fx:id="AddInstructor_Button" layoutX="323.0" layoutY="279.0" prefHeight="30.0" prefWidth="112.0" text="Add Instructor" />
+      <Button fx:id="AddClass_Button" layoutX="323.0" layoutY="186.0" prefHeight="30.0" prefWidth="112.0" style="-fx-background-color: #c41088;" text="Add Class" textFill="WHITE" />
+      <Button fx:id="AddStudent_Button" layoutX="323.0" layoutY="234.0" onAction="#AddStudent_Button" prefHeight="30.0" prefWidth="112.0" style="-fx-background-color: #c41088;" text="Add Student" textFill="WHITE" />
 
       <!-- Remove Article Functions Section -->
       <Label layoutX="549.0" layoutY="146.0" prefHeight="33.0" prefWidth="207.0" style="-fx-text-fill: white;" text="Remove Article Functions">
@@ -41,11 +40,10 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="RemoveStudent_Button" layoutX="587.0" layoutY="192.0" prefHeight="30.0" prefWidth="132.0" text="Remove Student" />
-      <Button fx:id="RemoveInstructor_Button" layoutX="587.0" layoutY="234.0" prefHeight="30.0" prefWidth="132.0" text="Remove Instructor" />
-      <Button fx:id="RemoveClass_Button" layoutX="587.0" layoutY="279.0" prefHeight="30.0" prefWidth="132.0" text="Remove Class" />
+      <Button fx:id="RemoveStudent_Button" layoutX="587.0" layoutY="192.0" prefHeight="30.0" prefWidth="132.0" style="-fx-background-color: #c41088;" text="Remove Student" textFill="WHITE" />
+      <Button fx:id="RemoveClass_Button" layoutX="587.0" layoutY="234.0" prefHeight="30.0" prefWidth="132.0" style="-fx-background-color: #c41088;" text="Remove Class" textFill="WHITE" />
 
       <!-- Logout Button -->
-      <Button fx:id="logout_Button" layoutX="335.0" layoutY="364.0" onAction="#logout" prefHeight="25.0" prefWidth="158.0" text="Logout" />
+      <Button fx:id="logout_Button" layoutX="300.0" layoutY="362.0" onAction="#logout" prefHeight="25.0" prefWidth="158.0" style="-fx-background-color: #c41088;" text="Logout" textFill="WHITE" />
    </children>
 </AnchorPane>
