--- a/CSE_360_PROJECT/admin_Instructor/addClass.fxml
+++ b/CSE_360_PROJECT/admin_Instructor/addClass.fxml
@@ -10,7 +10,7 @@
    <children>
       <Label layoutX="58.0" layoutY="32.0" text="Add Class" textFill="WHITE">
          <font>
-            <Font size="29.0" />
+            <Font name="System Bold" size="29.0" />
          </font>
       </Label>
       <TextField fx:id="className_TextField" layoutX="47.0" layoutY="104.0" promptText="math,english" />
