--- a/CSE_360_PROJECT/admin_Instructor/addStudentoClass.fxml
+++ b/CSE_360_PROJECT/admin_Instructor/addStudentoClass.fxml
@@ -1,30 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0" prefWidth="374.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="327.0" prefWidth="292.0" style="-fx-background-color: #71deaf;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin_Instructor.Addstudent_toclass">
    <children>
-      <Label layoutX="42.0" layoutY="28.0" prefHeight="62.0" prefWidth="290.0" text="Add Student to a Class" textAlignment="CENTER">
+      <Label layoutX="14.0" layoutY="23.0" prefHeight="62.0" prefWidth="290.0" text="Add Student to a Class" textAlignment="CENTER">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="160.0" prefHeight="44.0" prefWidth="113.0" text="Student:">
-         <font>
-            <Font size="22.0" />
-         </font>
-      </Label>
-      <Label layoutX="16.0" layoutY="243.0" prefHeight="51.0" prefWidth="132.0" text="Class Name:">
-         <font>
-            <Font size="19.0" />
-         </font>
-      </Label>
-      <TextField fx:id="Student_Name_Textfield" layoutX="148.0" layoutY="169.0" promptText="Student Name" />
-      <TextField fx:id="S_Group_Textfield" layoutX="152.0" layoutY="256.0" promptText="Class Name" />
-      <Button layoutX="90.0" layoutY="324.0" mnemonicParsing="false" onAction="#Add_student_to_group" prefHeight="36.0" prefWidth="177.0" text="Add to Class" />
+      <Button layoutX="58.0" layoutY="253.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="177.0" text="Add to Class" />
+      <ChoiceBox fx:id="class_ChoiceBox" layoutX="71.0" layoutY="116.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="student_ChoiceBox" layoutX="71.0" layoutY="181.0" prefWidth="150.0" />
+      <Label layoutX="71.0" layoutY="99.0" text="Select a class:" />
+      <Label layoutX="71.0" layoutY="164.0" text="Select a student:" />
    </children>
 </AnchorPane>
