--- a/CSE_360_PROJECT/admin_Instructor/application.css
+++ b/CSE_360_PROJECT/admin_Instructor/application.css
@@ -1,12 +1,20 @@
-.root{
-	
-	-fx-backround-color:"orange";
+.button
+{
+	-fx-background-color:  #c41088;
 }
 
 
 
+.button:hover
+{
+	-fx-background-color: #e880d1;
+}
 
-
+.button:pressed
+{
+	-fx-background-color: #631d54;
+	
+}
 
 
 
