--- a/CSE_360_PROJECT/InstructorPage/Instructor.fxml
+++ b/CSE_360_PROJECT/InstructorPage/Instructor.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
@@ -10,50 +11,54 @@
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#16c42a" height="178.0" layoutX="-41.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="511.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#169425" height="208.0" layoutY="-17.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="647.0" />
-      <Button layoutX="159.0" layoutY="412.0" mnemonicParsing="false" onAction="#Article_delete" prefHeight="26.0" prefWidth="98.0" text="Delete Articles" />
-      <Button fx:id="InstructorLoout" layoutX="205.0" layoutY="473.0" mnemonicParsing="false" onAction="#logout" prefHeight="35.0" prefWidth="216.0" text="Log out" />
-      <Label fx:id="UserLabel" layoutX="324.0" layoutY="100.0" text="user" textFill="WHITE">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="244.0" layoutY="100.0" text="Hello" textFill="WHITE">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
+      <Button layoutX="159.0" layoutY="412.0" mnemonicParsing="false" onAction="#Article_delete" prefHeight="26.0" prefWidth="98.0" stylesheets="@application.css" text="Delete Articles" textFill="WHITE" />
+      <Button fx:id="InstructorLoout" layoutX="205.0" layoutY="473.0" mnemonicParsing="false" onAction="#logout" prefHeight="35.0" prefWidth="216.0" stylesheets="@application.css" text="Log out" textFill="WHITE" />
       <Label fx:id="TitleLabel" layoutX="69.0" layoutY="38.0" prefHeight="35.0" prefWidth="532.0" text="            Welcome to the Instructor View" textAlignment="CENTER" textFill="WHITE">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="CreateArticlesButton" layoutX="160.0" layoutY="315.0" mnemonicParsing="false" onAction="#createArticle" prefHeight="18.0" prefWidth="98.0" text="Create Articles" />
-      <Button fx:id="ListArticlesButton" layoutX="160.0" layoutY="259.0" mnemonicParsing="false" onAction="#ListArtilces" prefHeight="26.0" prefWidth="98.0" text="View Articles" />
+      <Button fx:id="CreateArticlesButton" layoutX="160.0" layoutY="315.0" mnemonicParsing="false" onAction="#createArticle" prefHeight="18.0" prefWidth="98.0" stylesheets="@application.css" text="Create Articles" textFill="WHITE" />
+      <Button fx:id="ListArticlesButton" layoutX="160.0" layoutY="259.0" mnemonicParsing="false" onAction="#ListArtilces" prefHeight="26.0" prefWidth="98.0" stylesheets="@application.css" text="View Articles" textFill="WHITE" />
       <Label layoutX="11.0" layoutY="211.0" prefHeight="27.0" prefWidth="151.0" text="Help Articles:">
          <font>
-            <Font size="18.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Button fx:id="CreateHelpArticle" layoutX="12.0" layoutY="314.0" mnemonicParsing="false" onAction="#createHelpArticle" prefHeight="26.0" prefWidth="93.0" text="Create Articles" />
-      <Button fx:id="HelpArticle_Delete1" layoutX="12.0" layoutY="412.0" mnemonicParsing="false" onAction="#HelpArticle_delete1" prefHeight="26.0" prefWidth="93.0" text="Delete Articles" />
-      <Button fx:id="ListHelpArticles" layoutX="10.0" layoutY="259.0" mnemonicParsing="false" onAction="#ListHelpArticles" prefHeight="26.0" prefWidth="98.0" text="View Articles" />
+      <Button fx:id="CreateHelpArticle" layoutX="12.0" layoutY="314.0" mnemonicParsing="false" onAction="#createHelpArticle" prefHeight="26.0" prefWidth="93.0" stylesheets="@application.css" text="Create Articles" textFill="WHITE" />
+      <Button fx:id="HelpArticle_Delete1" layoutX="12.0" layoutY="412.0" mnemonicParsing="false" onAction="#HelpArticle_delete1" prefHeight="26.0" prefWidth="93.0" stylesheets="@application.css" text="Delete Articles" textFill="WHITE" />
+      <Button fx:id="ListHelpArticles" layoutX="10.0" layoutY="259.0" mnemonicParsing="false" onAction="#ListHelpArticles" prefHeight="26.0" prefWidth="98.0" stylesheets="@application.css" text="View Articles" textFill="WHITE" />
       <Label layoutX="149.0" layoutY="211.0" prefHeight="27.0" prefWidth="163.0" text="General Articles:">
          <font>
-            <Font size="18.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Button fx:id="back_up_Article" layoutX="503.0" layoutY="272.0" mnemonicParsing="false" onAction="#back_up_Article" text="Back Up Articles" />
-      <Button fx:id="Restore_Article" layoutX="505.0" layoutY="327.0" mnemonicParsing="false" onAction="#Restore_Article" text="Restore Articles" />
-      <Button fx:id="Edit_articlesbutton" layoutX="162.0" layoutY="360.0" mnemonicParsing="false" onAction="#Edit_articlesbutton" prefHeight="26.0" prefWidth="93.0" text="Edit Articles" />
-      <Button fx:id="EditHelpArticles" layoutX="10.0" layoutY="360.0" mnemonicParsing="false" onAction="#EditHelpArticles" prefHeight="26.0" prefWidth="98.0" text="Edit Articles" />
+      <Button fx:id="back_up_Article" layoutX="503.0" layoutY="272.0" mnemonicParsing="false" onAction="#back_up_Article" stylesheets="@application.css" text="Back Up Articles" textFill="WHITE" />
+      <Button fx:id="Restore_Article" layoutX="505.0" layoutY="327.0" mnemonicParsing="false" onAction="#Restore_Article" stylesheets="@application.css" text="Restore Articles" textFill="WHITE" />
+      <Button fx:id="Edit_articlesbutton" layoutX="162.0" layoutY="360.0" mnemonicParsing="false" onAction="#Edit_articlesbutton" prefHeight="26.0" prefWidth="93.0" stylesheets="@application.css" text="Edit Articles" textFill="WHITE" />
+      <Button fx:id="EditHelpArticles" layoutX="10.0" layoutY="360.0" mnemonicParsing="false" onAction="#EditHelpArticles" prefHeight="26.0" prefWidth="98.0" stylesheets="@application.css" text="Edit Articles" textFill="WHITE" />
       <Label layoutX="300.0" layoutY="207.0" prefHeight="35.0" prefWidth="206.0" text="Special Access Articles">
          <font>
-            <Font size="18.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Button fx:id="ListArticles_Special_Access" layoutX="320.0" layoutY="259.0" mnemonicParsing="false" onAction="#ListArticles_Special_Access" prefHeight="26.0" prefWidth="93.0" text="View Articles" />
-      <Button fx:id="CreateArticlesButton_Special_Access" layoutX="322.0" layoutY="315.0" mnemonicParsing="false" onAction="#CreateArticlesButton_Special_Access" text="Create Articles" />
-      <Button fx:id="Edit_articlesbutton_Special_Access" layoutX="322.0" layoutY="360.0" mnemonicParsing="false" onAction="#Edit_articlesbutton_Special_Access" prefHeight="26.0" prefWidth="93.0" text="Edit Articles" />
-      <Button layoutX="319.0" layoutY="412.0" mnemonicParsing="false" onAction="#Article_delete_Special_Access" prefHeight="26.0" prefWidth="98.0" text="Delete Articles" />
+      <Button fx:id="ListArticles_Special_Access" layoutX="320.0" layoutY="259.0" mnemonicParsing="false" onAction="#ListArticles_Special_Access" prefHeight="26.0" prefWidth="93.0" stylesheets="@application.css" text="View Articles" textFill="WHITE" />
+      <Button fx:id="CreateArticlesButton_Special_Access" layoutX="322.0" layoutY="315.0" mnemonicParsing="false" onAction="#CreateArticlesButton_Special_Access" stylesheets="@application.css" text="Create Articles" textFill="WHITE" />
+      <Button fx:id="Edit_articlesbutton_Special_Access" layoutX="322.0" layoutY="360.0" mnemonicParsing="false" onAction="#Edit_articlesbutton_Special_Access" prefHeight="26.0" prefWidth="93.0" stylesheets="@application.css" text="Edit Articles" textFill="WHITE" />
+      <Button layoutX="319.0" layoutY="412.0" mnemonicParsing="false" onAction="#Article_delete_Special_Access" prefHeight="26.0" prefWidth="98.0" stylesheets="@application.css" text="Delete Articles" textFill="WHITE" />
+      <HBox alignment="CENTER" layoutX="219.0" layoutY="135.0" prefHeight="35.0" prefWidth="200.0" spacing="10.0">
+         <children>
+            <Label text="Hello" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="UserLabel" text="user" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
